--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,8 @@
-FROM node:12
+FROM node:latest
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY Package*.json ./
+COPY package*.json ./
 
 RUN npm install
 
@@ -12,4 +12,4 @@ ENV PORT = 3000
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD [ "node", "project.js" ]
